--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -16,6 +16,11 @@ body {
   color: rgb(11, 0, 49);
 }
 
+.magnifiable:hover {
+  cursor: pointer;
+  transform: scale(1.03);
+}
+
 .home {
   display: flex;
   flex-direction: column;
@@ -26,19 +31,19 @@ body {
 .header {
   flex: 2;
   font-size: 5rem;
-  font-weight: 300;
+  font-weight: 350;
   font-style: oblique;
 
-  margin: 0 3empx;
+  margin: 10px 0;
 }
 
 .about-me {
   flex: 1;
   flex-basis: 33%;
   font-size: 2rem;
-  font-weight: 200;
+  font-weight: 250;
 
-  margin: 0 3empx;
+  margin: 0 3em;
 }
 
 .nav-buttons {
@@ -70,11 +75,6 @@ body {
   color: #ffffff;
 }
 
-.nav-botton:hover {
-  cursor: pointer;
-  transform: scale(1.03);
-}
-
 .not-ready {
   opacity: 0.7;
   color: gray;
@@ -88,12 +88,24 @@ body {
 
 .contact-container {
   flex: 1;
-  margin: 2em;
+  margin: auto;
+  padding: 1em;
+
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 20px;
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1em;
+  justify-content: center;
 }
 
 .contact-container h3 {
+  flex-basis: 100%;
   font-size: 3rem;
-  margin: 0.5em;
+  margin: 0;
 }
 
 .contact-container p {
@@ -103,4 +115,9 @@ body {
 
 .social-link {
   color: #223759;
+}
+
+.social-icon {
+  width: 50px;
+  height: 50px;
 }
